Empezamos views Registro e Iniciar Sesion

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+<button class="button" type="submit">
+    <a href='@Url.Action("Registrarte", "Dennys")'>Registrarte</a>
+</button>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<button class="button" type="submit">
+    <a href='@Url.Action("Login", "Dennys")'>Iniciar Sesion</a>
+</button>
