--- a/Views/Dennys/Registro.cshtml
+++ b/Views/Dennys/Registro.cshtml
@@ -1,4 +1,4 @@
-<body>
+
     <main>
       <div class="grilla">
         <div class="imagen">
@@ -7,7 +7,7 @@
         <div class="padre">
           <div class="formulario">
             <div class="logo">
-              <img src="../IMG/logo-dennys.png">
+              <img src="../img/logo-dennys.png">
             </div>
             <form action='@Url.Action("GuardarCliente", "Dennys")' class="div-form" onsubmit= "return validarContraseña()" method="post">
               <div class="label-input">
@@ -51,7 +51,40 @@
         </div>
       </div>
     </main>
-  </body>
-</html>
+
+    <footer class="pie-pagina">
+
+
+  <div class="grupo-1"> 
+    <div class="box">
+      <figure>
+        <a href="#">
+          <img src="../img/logo-dennys.png"  >
+        </a>
+      </figure>
+    </div>
+    <div class="box">
+      <h2>SOBRE NOSOTROS</h2>
+      <p>Empresa líder en tecnología, venta y soporte informático en Argentina.</p>
+      <p>Tecnología y servicios informáticos de calidad en Argentina.</p>
+    </div>
+    <div class="box">
+      <h2>SIGUENOS</h2>
+      <div class="red-social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-whatsapp"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="grupo-2">
+    <small>&copy; 2023 <b>Dennys </b>Todos los derechos reservados</small>
+  </div>
+
+
+</footer>
+ 
 
 
