--- a/Views/Dennys/Bienvenida.cshtml
+++ b/Views/Dennys/Bienvenida.cshtml
@@ -1,1 +1,118 @@
-﻿
+﻿<main class="cuerpo">
+    <div class="primeras3">
+        @foreach (Restaurante item in ViewBag.ListaRestaurantes)
+        {
+            <div class="padre2">
+                    <img class="imgan" src="@item.Imagen" alt="">
+                <div class="div-p-nombre">
+                    <p>@item.Nombre</p>
+                </div>
+                <div class="div-p-Direccion">
+                    <p>@item.Direccion</p>
+                </div>
+                <div class="btns">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalValorar" onclick="cargarIdRestaurante(@item.IdRestaurante)">
+                    Valorar
+                    </button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalVerMas" onclick="mostrarDetallesRestaurante(@item.IdRestaurante)">
+                    Ver Mas
+                    </button>
+
+                    <div class="btn3">
+                        <button class="bot2">Reservar</button>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</main>
+
+
+<div class="modal" tabindex="-1" id="ModalReserva" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Valorar-->
+
+  <div class="modal" tabindex="-1" id="ModalValorar" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+    <div class="modal-dialog">
+
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title">@ViewBag.InfoCliente.Nombre</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+<form action='@Url.Action("GuardarReseña", "Dennys")' method="post">
+
+  
+        <div class="modal-body">
+            <input type="hidden" name="idCliente" value="@ViewBag.InfoCliente.IdCliente">
+            <input type="hidden" name="idRestaurante" id="IdRestaurante">
+            <div class="rating">
+            <input value="5" name="Valoracion" id="star5" type="radio">
+            <label title="text" for="star5"></label>
+            <input value="4" name="Valoracion" id="star4" type="radio">
+            <label title="text" for="star4"></label>
+            <input value="3" name="Valoracion" id="star3" type="radio" checked="">
+            <label title="text" for="star3"></label>
+            <input value="2" name="Valoracion" id="star2" type="radio">
+            <label title="text" for="star2"></label>
+            <input value="1" name="Valoracion" id="star1" type="radio">
+            <label title="text" for="star1"></label>
+            <input type="textarea" name="Comentario">
+        </div>
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Publicar</button>
+        </div>
+</form>
+      </div>
+
+    </div>
+
+  </div>
+
+  <!--Ver mas-->
+
+  <!-- Modal Ver Mas -->
+<div class="modal" tabindex="-1" id="ModalVerMas" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitulo"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="" alt="" id="modalImagen" class="img-fluid mb-3">
+                <p id="modalDescripcion"></p>
+                <p><strong>Dirección:</strong> <span id="modalDireccion"></span></p>
+                <p><strong>Horario de Apertura:</strong> <span id="modalApertura"></span></p>
+                <p><strong>Horario de Clausura:</strong> <span id="modalClausura"></span></p>
+                <p><strong>Fecha de Fundación:</strong> <span id="modalFechaFundacion"></span></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Guardar cambios</button>
+            </div>
+        </div>
+    </div>
+</div>
