--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,75 @@
-<button class="button" type="submit">
-    <a href='@Url.Action("Registrarte", "Dennys")'>Registrarte</a>
-</button>
+<main>
+    <div class="grilla">
+      <div class="imagen"></div>
+      <div class="padre-index">
+        
+         
+          <div class="logo">
+            <img src="./img/logo-dennys.png" alt="" />
+          </div>
+          <div class="txt-ind">
+            <h1 class="ind-text">¡Bienvenido a Dennys!</h1>
+          </div>
+          <div class="padre-btns">
+            <div class="medio">
+            <div class="div-boton2">
+                <button class="button" type="submit">
+                    <a href='@Url.Action("Registrarte", "Dennys")'>Registrarte</a>
+                </button>
+              </div>
+              <div class="div-boton2">
+                 <button class="button" type="submit">
+                        <a href='@Url.Action("Login", "Dennys")'>Iniciar Sesion</a>
+                </button>
+                </div>
+              </div>
+               
 
-<button class="button" type="submit">
-    <a href='@Url.Action("Login", "Dennys")'>Iniciar Sesion</a>
-</button>
+              </div>  
+
+              
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    
+  </main>
+ 
+
+<footer class="pie-pagina">
+
+
+  <div class="grupo-1"> 
+    <div class="box">
+      <figure>
+        <a href="#">
+          <img src="./img/logo-dennys.png" alt="logo" >
+        </a>
+      </figure>
+    </div>
+    <div class="box">
+      <h2>SOBRE NOSOTROS</h2>
+      <p>Empresa líder en tecnología, venta y soporte informático en Argentina.</p>
+      <p>Tecnología y servicios informáticos de calidad en Argentina.</p>
+    </div>
+    <div class="box">
+      <h2>SIGUENOS</h2>
+      <div class="red-social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-whatsapp"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="grupo-2">
+    <small>&copy; 2023 <b>Dennys </b>Todos los derechos reservados</small>
+  </div>
+
+
+</footer>
