--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProyectoFinal4To.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/3a9c0fcb92.js" crossorigin="anonymous"></script>
 </head>
 <body>
    
