--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,171 +1,472 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap');
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+/*HEADER*/
+header{
+  box-shadow: 0 0 20px rgba(0, 0, 0,0.1);
+  padding: 15px;
+}
+.img-logo{
+  width: 10%;
+}
+.img-logo img{
+  width: 60%;
+}
+.nav-item{
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.navbar-nav{
+  justify-content: end !important;
+}
+.navegador{
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+/*INDEX*/
+.padre-index{
+  margin-top: 13rem;
+}
+
+
 .grilla{
-   
-    height: 100vh;
-    background-color: rgb(204, 62, 37);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
+ 
+  height: 100vh;
+  background-color: rgb(204, 62, 37);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
 }
 .imagen{
-    background-image: url(../IMG/portada.png);
-    background-repeat: no-repeat;
-    background-size: 100vh;
+  background-image: url(../img/portada.png);
+  background-repeat: no-repeat;
+  background-size: 100vh;
 }
 .logo{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 4rem;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 .logo img{
-    width: 30%;
+  width: 30%;
 }
 .padre{
-    
-    margin: 1rem;
+  
+  margin: 1rem;
 }
 .formulario{
 
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
 }
 
 .div-form{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 10px;
-    padding: 40px;
-    gap: 30px; 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 40px;
+  gap: 7px; 
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  
 }
 .div-form label{
-    margin: .2rem;
-    font-family: 'Overpass', sans-serif;
-    font-weight: bold;
+  margin: .2rem;
+  font-family: 'Overpass', sans-serif;
+  font-weight: bold;
 }
 .label-input{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
 }
 
 .div-form input{
-    padding: .5rem;
-    border-radius: 10px;
-    border: none;
-    
+  padding: .4rem;
+  border-radius: 10px;
+  border: none;
+  
 }
 .padre-button{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .div-boton{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
 .button {
-    align-items: center;
-    appearance: none;
-    background-color: #EEF2FF;
-    border-radius: 8px;
-    border-width: 2px;
-   border: none;
-    box-shadow: rgba(83, 109, 254, 0.2) 0 2px 4px, rgba(83, 109, 254, 0.15) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
-    height: 56px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 24px;
-    padding-right: 24px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow 0.15s, transform 0.15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow, transform;
-    font-size: 20px;
-  }
-  .button a {
-    color: black;
-    text-decoration: none;
-  }
-  
-  .button:focus {
-    outline: none;
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(255, 255, 255, 0.4) 0 2px 4px, rgba(83, 109, 254, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  }
-  
-  .button:hover {
-    box-shadow: rgba(163, 163, 163, 0.3) 0 4px 8px, rgba(129, 129, 129, 0.2) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-  }
-  
-  .button:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-  }
-   .div-ya-tenes{
-    display: flex;
-    justify-content: center;
-   
-    gap: 5px;
-   }
-   .p-ya-tenes{
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-   }
-   .a-ya-tenes{
-    color: #ffcb3d;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+  align-items: center;
+  appearance: none;
+  background-color: #EEF2FF;
+  border-radius: 8px;
+  border-width: 2px;
+ border: none;
+  box-shadow: rgba(83, 109, 254, 0.2) 0 2px 4px, rgba(83, 109, 254, 0.15) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 56px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 24px;
+  padding-right: 24px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 20px;
+}
+.button a {
+  color: black;
+  text-decoration: none;
 }
 
-/*registro*/
+.button:focus {
+  outline: none;
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(255, 255, 255, 0.4) 0 2px 4px, rgba(83, 109, 254, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button:hover {
+  box-shadow: rgba(163, 163, 163, 0.3) 0 4px 8px, rgba(129, 129, 129, 0.2) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+ .div-ya-tenes{
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+ }
+ .p-ya-tenes{
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
+ .a-ya-tenes{
+  color: #ffcb3d;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+/*index*/
+.ind-text{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  
+}
+.txt-ind{
+  display: flex;
+  justify-content: center;
+  
+}
+.padre-button-index{
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*Registro*/
 .a-olvide{
-    padding: 2rem;
+  padding: 2rem;
 }
 .kajka{
-    box-shadow: 0 2px 2px rgb(76, 76, 76);
-    
+  box-shadow: 0 2px 2px rgb(76, 76, 76);
+  
 }
 .a{
-    display: flex;
-    justify-content: center;
-    gap: 75px;
-    padding: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 75px;
+  padding: 1rem;
 }
 .b{
-    display: flex;
-    justify-content: center;
-    gap: 75px;
-    padding: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 75px;
+  padding: 1rem;
 }
 .c{
-    display: flex;
-    justify-content: center;
-    gap: 75px;
-    padding: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 75px;
+  padding: 1rem;
 }
 
+
+/*Home*/
+
+.cuerpo{
+  display: flex;
+  flex-direction: column;
+ 
+}
+.primeras3{
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  flex-wrap: wrap;
+}
+.segundas3{
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  flex-wrap: wrap;
+}
+.ultimas3{
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  flex-wrap: wrap;
+}
+.padre2{
+  width: 20%;
+  transition: transform 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+  border-radius: 10px;
+  margin: 1rem;
+}
+.imgan{
+  border-radius: 10px 10px 0px 0px ;
+  width: 100%;
+}
+.div-p-nombre{
+  display: flex;
+  justify-content: center;
+}
+.div-p-nombre p {
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size:30px;
+}
+.div-p-Direccion{
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+.div-p-Direccion p {
+  font-family:'Times New Roman', Times, serif;
+}
+.btns{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  padding: 1rem;
+  flex-wrap: wrap;
+}
+
+.bot1 {
+  background-color: gray;
+  padding: 10px 20px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px dashed #7b7d7d;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .4s;
+ }
+ 
+ .bot1 span:last-child {
+  display: none;
+ }
+ 
+ .bot1:hover {
+  transition: .4s;
+  border: 2px dashed #535454;
+  background-color: #fff;
+  color: black;
+ }
+ 
+ .bot1:active {
+  background-color: #a4a4a4;
+ }
+
+
+ .bot2 {
+  background-color: red;
+  padding: 10px 20px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px dashed #ff0000;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .4s;
+ }
+ 
+ .bot2 span:last-child {
+  display: none;
+ }
+ 
+ .bot2:hover {
+  transition: .4s;
+  border: 2px dashed rgb(255, 0, 0);
+  background-color: #ffffff;
+  color: black;
+ }
+ 
+ .bot2:active {
+  background-color: rgb(255, 105, 105);
+ }
+ 
+
+
+/*CAMBIAR CONTRASEÑA*/
+.body-cambiar{
+  background-color: rgb(204, 62, 37);
+}
+.padre-btns{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10%;
+}
+.medio{
+  display: flex;
+  gap: 50px;
+  margin-top: 1rem;
+}
+.slogan{
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+  
+}
+.padre-carrusel{
+  margin: 2rem;
+  width:30%;
+}
+
+
+
+/*FOOTER*/
+
+/*vista mediana y tambien chica */
+.pie-pagina {
+  width: 100%;
+  background-color: #f83f3f;
+}
+.pie-pagina .grupo-1 {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 45px 0;
+}
+
+.pie-pagina .grupo-1 .box figure {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pie-pagina .grupo-1 .box img {
+  width: 170px;
+}
+.pie-pagina .grupo-1 .box h2 {
+  color: #fff;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p {
+  color: #efefef;
+  margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a {
+  display: inline-block;
+  text-decoration: none;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: #fff;
+  margin-right: 10px;
+  background-color: #f77272;
+  text-align: center;
+  transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover {
+  color: rgb(0, 0, 0);
+}
+.pie-pagina .grupo-2 {
+  background-color: #a13030;
+  padding: 15px 10px;
+  text-align: center;
+  color: white;
+}
+.pie-pagina .grupo-2 small {
+  font-size: 18px;
+}
+
+/*vista mediana y tambien para chica */
+@media screen and (max-width: 824px) {
+  .pie-pagina .grupo-1 {
+      width: 90%;
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 30px;
+      padding: 35px 0;
+    }
+}
+ 
+
+
+.rating:not(:checked) > input {
+    position: absolute;
+    appearance: none;
+  }
+  
+  .rating:not(:checked) > label {
+    float: right;
+    cursor: pointer;
+    font-size: 30px;
+    color: #666;
+  }
+  
+  .rating:not(:checked) > label:before {
+    content: '★';
+  }
+  
+  .rating > input:checked + label:hover,
+  .rating > input:checked + label:hover ~ label,
+  .rating > input:checked ~ label:hover,
+  .rating > input:checked ~ label:hover ~ label,
+  .rating > label:hover ~ input:checked ~ label {
+    color: #e58e09;
+  }
+  
+  .rating:not(:checked) > label:hover,
+  .rating:not(:checked) > label:hover ~ label {
+    color: #ff9e0b;
+  }
+  
+  .rating > input:checked ~ label {
+    color: #ffa723;
+  }
+  
+  
+  
+  
