--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -214,35 +214,32 @@ header{
 
 /*Home*/
 
-.cuerpo{
-  display: flex;
-  flex-direction: column;
- 
-}
+
 .primeras3{
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  flex-wrap: wrap;
+  display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 1fr 1fr 1fr;
 }
-.segundas3{
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  flex-wrap: wrap;
-}
-.ultimas3{
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  flex-wrap: wrap;
-}
+
+
 .padre2{
-  width: 20%;
+ 
   transition: transform 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
   border-radius: 10px;
   margin: 1rem;
+}
+@media screen and (max-width:1200px)  {
+  .primeras3{
+      grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width:992px)  {
+  .primeras3{
+      grid-template-columns: 1fr ;
+      
+  }
+ 
 }
 .imgan{
   border-radius: 10px 10px 0px 0px ;
