--- a/Views/Dennys/Bienvenida.cshtml
+++ b/Views/Dennys/Bienvenida.cshtml
@@ -15,7 +15,7 @@
                     Valorar
                     </button>
                     <div class="btn3">
-                        <button class="bot2">Reservar</button>
+                        <button type="button" class="bot2" data-bs-toggle="modal" data-bs-target="#ModalReserva">Reservar</button>
                     </div>
                     <button type="button" class="bot1" data-bs-toggle="modal" data-bs-target="#ModalVerMas" onclick="mostrarDetallesRestaurante(@item.IdRestaurante)">
                     Ver Mas
@@ -28,69 +28,72 @@
     </div>
 </main>
 
-
+  <!--Reserva-->
 <div class="modal" tabindex="-1" id="ModalReserva" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
+          <h5 class="modal-title">Reserva de Mesa</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Modal body text goes here.</p>
+          <form>
+            <div class="mb-3">
+              <label for="fechaReserva" class="form-label">Fecha de Reserva</label>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="Calendario()">Seleccionar Fecha</button>
+          </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="submit" class="btn btn-primary" onclick="GuardarReserva()">Guardar Reserva</button>
         </div>
       </div>
     </div>
-  </div>
+</div>
 
   <!--Valorar-->
 
+ 
+
   <div class="modal" tabindex="-1" id="ModalValorar" aria-labelledby="exampleModalLabel" aria-hidden="true">
-
-    <div class="modal-dialog">
-
-      <div class="modal-content">
-
-        <div class="modal-header">
-          <h5 class="modal-title">@ViewBag.InfoCliente.Nombre</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-<form action='@Url.Action("GuardarReseña", "Dennys")' method="post">
-
-  
-        <div class="modal-body">
-            <input type="hidden" name="idCliente" value="@ViewBag.InfoCliente.IdCliente">
+    <div class="modal-dialog modal-lg"> <!-- Utiliza la clase modal-lg para un tamaño grande -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="centrar-titlulo">
+                    <h5 class="modal-title">@ViewBag.InfoCliente.Nombre</h5>
+                </div>
+            </div>
+            <form action='@Url.Action("GuardarReseña", "Dennys")' method="post">
+                <div class="modal-body">
+                      <input type="hidden" name="idCliente" value="@ViewBag.InfoCliente.IdCliente">
             <input type="hidden" name="idRestaurante" id="IdRestaurante">
+            
+            <p><textarea name="Comentario" placeholder="Comparte tu opinión!"></textarea></p>
             <div class="rating">
-            <input value="5" name="Valoracion" id="star5" type="radio">
-            <label title="text" for="star5"></label>
-            <input value="4" name="Valoracion" id="star4" type="radio">
-            <label title="text" for="star4"></label>
-            <input value="3" name="Valoracion" id="star3" type="radio" checked="">
-            <label title="text" for="star3"></label>
+              <input value="1" name="Valoracion" id="star1" type="radio">
+            <label title="text" for="star1"></label>
             <input value="2" name="Valoracion" id="star2" type="radio">
             <label title="text" for="star2"></label>
-            <input value="1" name="Valoracion" id="star1" type="radio">
-            <label title="text" for="star1"></label>
-            <input type="textarea" name="Comentario">
+            <input value="3" name="Valoracion" id="star3" type="radio" checked="">
+            <label title="text" for="star3"></label>
+            <input value="4" name="Valoracion" id="star4" type="radio">
+            <label title="text" for="star4"></label>
+            <input value="5" name="Valoracion" id="star5" type="radio">
+            <label title="text" for="star5"></label>
+            
+                  </div>
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Publicar</button>
+                </div>
+            </form>
         </div>
-
-        </div>
-
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Publicar</button>
-        </div>
-</form>
-      </div>
-
     </div>
+</div>
 
-  </div>
 
   <!--Ver mas-->
 
