--- a/Views/Dennys/Bienvenida.cshtml
+++ b/Views/Dennys/Bienvenida.cshtml
@@ -69,23 +69,27 @@
             <form action='@Url.Action("GuardarReseña", "Dennys")' method="post">
                 <div class="modal-body">
                       <input type="hidden" name="idCliente" value="@ViewBag.InfoCliente.IdCliente">
-            <input type="hidden" name="idRestaurante" id="IdRestaurante">
+                        <input type="hidden" name="idRestaurante" id="IdRestaurante">
             
             <p><textarea name="Comentario" placeholder="Comparte tu opinión!"></textarea></p>
+    <div class="contenedor-esterllas">
             <div class="rating">
-              <input value="1" name="Valoracion" id="star1" type="radio">
-            <label title="text" for="star1"></label>
-            <input value="2" name="Valoracion" id="star2" type="radio">
-            <label title="text" for="star2"></label>
-            <input value="3" name="Valoracion" id="star3" type="radio" checked="">
-            <label title="text" for="star3"></label>
-            <input value="4" name="Valoracion" id="star4" type="radio">
-            <label title="text" for="star4"></label>
-            <input value="5" name="Valoracion" id="star5" type="radio">
-            <label title="text" for="star5"></label>
+             
+
+                <input value="5" name="Valoracion" id="star5" type="radio">
+  <label title="text" for="star5"></label>
+  <input value="4" name="Valoracion" id="star4" type="radio">
+  <label title="text" for="star4"></label>
+  <input value="3" name="Valoracion" id="star3" type="radio" checked="">
+  <label title="text" for="star3"></label>
+  <input value="2" name="Valoracion" id="star2" type="radio">
+  <label title="text" for="star2"></label>
+  <input value="1" name="Valoracion" id="star1" type="radio">
+  <label title="text" for="star1"></label>
             
                   </div>
                     
+                </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
@@ -117,7 +121,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary">Guardar cambios</button>
+                
             </div>
         </div>
     </div>
