--- a/Views/Dennys/Login.cshtml
+++ b/Views/Dennys/Login.cshtml
@@ -1,4 +1,4 @@
-﻿<body>
+﻿
     <main>
         <div class="grilla">
           <div class="imagen"></div>
@@ -46,7 +46,7 @@
     <div class="box">
       <figure>
         <a href="#">
-          <img src="./img/logo-dennys.png" alt="logo" >
+          <img src="../img/logo-dennys.png" alt="logo" >
         </a>
       </figure>
     </div>
@@ -69,5 +69,3 @@
   <div class="grupo-2">
     <small>&copy; 2023 <b>Dennys </b>Todos los derechos reservados</small>
   </div>
-    
-</body>
