--- a/Views/Dennys/Bienvenida.cshtml
+++ b/Views/Dennys/Bienvenida.cshtml
@@ -1,4 +1,42 @@
-﻿<main class="cuerpo">
+﻿<header>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link"  href='@Url.Action("Bienvenida", "Dennys")'>Inicio</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href='@Url.Action("Ayuda", "Dennys")'>Ayuda</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Funcionalidades
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Perfil</a></li>
+            <li><a class="dropdown-item" href='@Url.Action("AgregarRestaurante", "Dennys")'>Agregar Restaurante</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-disabled="true">Contactanos</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+</header>
+<main class="cuerpo">
     <div class="primeras3">
         @foreach (Restaurante item in ViewBag.ListaRestaurantes)
         {
@@ -20,6 +58,12 @@
                     <button type="button" class="bot1" data-bs-toggle="modal" data-bs-target="#ModalVerMas" onclick="mostrarDetallesRestaurante(@item.IdRestaurante)">
                     Ver Mas
                     </button>
+                     <a href='@Url.Action("ObtenerReseñas", "Dennys", new{idResto = @item.IdRestaurante})' class="bot1">
+                    Ver Reseñas
+                    </a>
+                   <a href='@Url.Action("EliminarRestaurante", "Dennys", new {idResto = @item.IdRestaurante})' class="bot1">
+                    Eliminar Candidato
+                    </a>
 
                     
                 </div>
@@ -48,7 +92,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button class="btn btn-primary" onclick="alerta(), GuardarReserva(@ViewBag.InfoCliente.IdCliente)">Guardar Reserva</button>
+          <button class="btn btn-primary" onclick="alertaReserva(), GuardarReserva(@ViewBag.InfoCliente.IdCliente)">Guardar Reserva</button>
         </div>
       </div>
     </div>
@@ -66,13 +110,14 @@
                     <h5 class="modal-title">@ViewBag.InfoCliente.Nombre</h5>
                 </div>
             </div>
-            <form method="post">
+           
                 <div class="modal-body">
                     <input type="hidden" name="idCliente" value="@ViewBag.InfoCliente.IdCliente">
                     <input type="hidden" name="idRestaurante" id="IdRestaurante">
-            
-                    <p><textarea name="Comentario" placeholder="Comparte tu opinión!" id="comentario"></textarea></p>
-
+                    <div id="cuadroTexto">
+                    <p><textarea name="Comentario" placeholder="Comparte tu opinión!" id="comentario" maxlength="500"  oninput="validarLongitud(this)"></textarea></p>
+                    <p id="contador">500/500</p>
+                        </div>
                     <div class="contenedor-esterllas">
                         <div class="rating">
                             <input value="5" name="Valoracion" id="star5" type="radio">
@@ -90,9 +135,9 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-                    <button class="btn btn-primary" onclick="alerta(), GuardarReseña(@ViewBag.InfoCliente.IdCliente)">Publicar</button>
+                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="GuardarReseña(@ViewBag.InfoCliente.IdCliente)">Publicar</button>
                 </div>
-            </form>
+            
         </div>
     </div>
 </div>
@@ -123,3 +168,36 @@
         </div>
     </div>
 </div>
+  <footer class="pie-pagina">
+
+
+  <div class="grupo-1"> 
+    <div class="box">
+      <figure>
+        <a href="#">
+          <img src="../img/logo-dennys.png"  >
+        </a>
+      </figure>
+    </div>
+    <div class="box">
+      <h2>SOBRE NOSOTROS</h2>
+      <p>Empresa líder en tecnología, venta y soporte informático en Argentina.</p>
+      <p>Tecnología y servicios informáticos de calidad en Argentina.</p>
+    </div>
+    <div class="box">
+      <h2>SIGUENOS</h2>
+      <div class="red-social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-whatsapp"></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="grupo-2">
+    <small>&copy; 2023 <b>Dennys </b>Todos los derechos reservados</small>
+  </div>
+
+
+</footer>
