--- a/Views/Dennys/ayuda.cshtml
+++ b/Views/Dennys/ayuda.cshtml
@@ -1,7 +1,7 @@
  <header>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" href='@Url.Action("Bienvenida", "Dennys")'>Inicio</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href='@Url.Action("Ayuda", "Dennys")'>Ayuda</a>
+        <a class="nav-link active" href='@Url.Action("Ayuda", "Dennys")'>Ayuda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -19,13 +19,13 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Perfil</a></li>
-            <li><a class="dropdown-item" href="#">Agregar Restaurante</a></li>
+            <li><a class="dropdown-item" href='@Url.Action("AgregarRestaurante", "Dennys")'>Agregar Restaurante</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link " aria-disabled="true">Contactanos</a>
+          <a class="nav-link active " aria-current="page">Contactanos</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
