--- a/Views/Dennys/AgregarRestaurante.cshtml
+++ b/Views/Dennys/AgregarRestaurante.cshtml
@@ -31,10 +31,7 @@
           <a class="nav-link active " aria-current="page">Contactanos</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      
     </div>
   </div>
 </nav>
@@ -50,6 +47,10 @@
     <div class="label-input">
         <label for="nombre">Nombre*</label>
         <input type="text" placeholder="Nombre" name="Nombre" required />
+    </div>
+    <div class="label-input">
+        <label for="Direccion">Direccion*</label>
+        <input type="text" name="Direccion" placeholder="Direccion" required>
     </div>
     <div class="label-input">
         <label for="HorarioApertura">Horario Apertura*</label>
