--- a/Views/Dennys/Registro.cshtml
+++ b/Views/Dennys/Registro.cshtml
@@ -1,5 +1,4 @@
-
-    <main>
+<main>
       <div class="grilla">
         <div class="imagen">
             
@@ -31,8 +30,8 @@
                 <label for="nombre">Confirmar Contraseña*</label>
                   <input type="password" placeholder="Contraseña" name="Contraseña" id="contraseña2"  required>
               </div>
-                <p class="inc1" id="incorrecta1"></p>
-                <p class="inc2" id="incorrecta2"></p>
+                <p class="inc1" style="color: rgb(200, 255, 0);" id="incorrecta1"></p>
+                <p class="inc2" style="color: rgb(200, 255, 0);" id="incorrecta2"></p>
               
               <div class="padre-button">
               <div class="div-boton">
